# speech_emotion_recognition_model

./: .gitignore  README.md  dataset_handling.ipynb  main.py  model_training.ipynb  pyproject.toml
