[project]
name = "ser-training"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "jupyter>=1.1.1",
    "keras>=3.10.0",
    "librosa>=0.11.0",
    "matplotlib>=3.9.4",
    "notebook>=7.4.5",
    "numpy>=2.0.2",
    "openpyxl>=3.1.5",
    "pandas>=2.3.1",
    "seaborn>=0.13.2",
    "tensorflow>=2.20.0",
]
